/*
 * Copyright Â© 2020, The Gust Framework Authors. All rights reserved.
 *
 * The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
 * are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
 * this code in object or source form requires and implies consent and agreement to that license in principle and
 * practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
 * Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
 * Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
 * by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
 * is strictly forbidden except in adherence with assigned license requirements.
 */
syntax = "proto3";

package gust.backend.model;

option optimize_for = SPEED;
option cc_enable_arenas = true;
option java_multiple_files = false;
option java_string_check_utf8 = true;
option java_outer_classname = "PersonRecord";

import "core/datamodel.proto";


// Proto for dependency testing.
message Person {
  option (core.role) = OBJECT;

  // Unique record ID.
  PersonKey key = 1 [(core.field).type = KEY];

  // Salutation name.
  string name = 2;

  // Person's contact info.
  ContactInfo contact_info = 3;
}


// Models a key.
message PersonKey {
  option (core.role) = OBJECT_KEY;
  option (core.db).path = "people";
  option (core.db).mode = COLLECTION;

  // Unique record ID.
  string id = 1 [(core.field).type = ID];
}


// Person's address.
message PersonAddress {
  // First line of the person's address.
  string first_line = 1;

  // Second line of the person's address.
  string second_line = 2;
}


// Simple nested record.
message ContactInfo {
  option (core.db).mode = NESTED;

  // Person's email address.
  string email_address = 1;

  // Person's phone number in E164 format.
  string phone_e164 = 2;

  // Person's address info.
  PersonAddress address = 3;
}


// Models a non-object.
message EnrollEvent {
  option (core.role) = EVENT;
}
